--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-output: github_document
+output: html_document
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -9,7 +9,8 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "100%",
+  eval = TRUE
 )
 ```
 
@@ -20,12 +21,13 @@ knitr::opts_chunk$set(
 
 ## Concept
 
-```{r, eval = FALSE}
+```{r}
 library(tidyverse)
 library(rdeck)
 library(sf)
 library(RcppSimdJson)
 library(viridis)
+library(rdeck.controls)
 
 url <- file.path(
   "https://raw.githubusercontent.com/visgl/deck.gl-data/master",
@@ -102,13 +104,13 @@ manhattan_map <-
   )
 ```
 
-```{r, eval = FALSE}
+```{r}
 rdeck_layer_dropdown(
   manhattan_map,
   starts_with("manhattan")
 )
 ```
 
-```{r, eval = FALSE}
+```{r}
 manhattan_map
 ```
